<resources>
    <string name="app_name">Riddles</string>
    <string name="let_s_start_riddling">LET\'S START RIDDLING</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="riddle_1">RIDDLE 1</string>
    <string name="riddle_2">RIDDLE 2</string>
    <string name="next">NEXT</string>
    <string name="riddle_3">RIDDLE 3</string>
    <string name="riddle_4">RIDDLE 4</string>
    <string name="riddle_5">RIDDLE 5</string>
    <string name="riddle_6">RIDDLE 6</string>
    <string name="finish">FINISH</string>
    <string name="task_2">BLOCK THE LIGHT SOURCE</string>
    <string name="task_4">HOLD AN OBJECT CLOSE TO YOUR PHONE</string>
    <string name="sth">sth</string>
    <string name="todo">TODO</string>
    <string name="task_3">PUT THE GREEN DOT IN THE RED DOT</string>
    <string name="task_5">MAKE THE NEEDLE SHOW THE NORTH</string>
    <string name="ch_opak_nie_ciana_da_si_przesun">CHŁOPAK NIE ŚCIANA, DA SIĘ PRZESUNĄĆ</string>
    <string name="movable_wall">movable wall</string>
    <string name="finish">FINISH</string>
</resources>